feat(frontend): added initial login page (#1)
* feat(frontend): added initial login page and initial layout

* chore(workspace): added npx to husky script

* feat(frontend): changed layout.js to tsx

* feat(frontend): added layout styles and clsx

* style(frontend): added sf-mono font

* feat(frontend): added form styles

* fix(frontend): removed unnecesary css logic

* chore(frontend): added apollo client

* feat(frontend): fetch login endpoint using apollo client

* feat(frontend): install access-token and _csrf cookies correctly

* feat(db): added password to user schema

* feat(db): removed mesh.yml file

* feat(db): ignore meshrc.yml config

* feat(backend): check user password on login

* chore(shared-models): remove "node_modules/.prisma/client"

* chore(shared-models): add "shared-models/node_modules/" to .gitignore

* fix(backend): fix run time error

* feat(fronted): added authentication and home and profile initial templates

* fix(backend): use prisma find first  method to find user

* chore(backend): refactor user query resolver

* chore(bakend): remove _typename from graphql types

* feat(frontend): added csrf-token header to apollo config

* refactor(frontend): move apollo config to his own file

* feat(backend): add me to user-queries.resolver

* fix(frontend): use me query instead of user and fixed login return

* fix(frontend): removed models from ui and use shared types instead

* refactor(frontend): removed multiple returns for authentication

Co-authored-by: Mario Andres <marioarendon2@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@
 
 # IDE - VSCode
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
@@ -39,3 +39,6 @@ testem.log
 Thumbs.db
 
 .env
+.env.local
+
+.meshrc.yml
